--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@roamlerorg/services": ["libs/services/src/index.ts"],
+      "@roamlerorg/types": ["libs/types/src/index.ts"],
       "@roamlerorg/ui-components": ["libs/ui-components/src/index.ts"]
     }
   },
