--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "axios-mock-adapter": "^1.21.1",
     "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
