--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "roamlerorg",
   "version": "0.0.0",
+  "homepage": ".",
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
